--- a/app.css
+++ b/app.css
@@ -22,7 +22,7 @@ body {
 .container {
     display: grid;
     place-items: center;
-    margin: 8rem 9rem;
+    margin: 8rem;
     grid-template-columns: repeat(4, 1fr);
     gap: 2rem;
     grid-auto-rows: minmax(120px, auto);
@@ -49,13 +49,14 @@ body {
     height: 4rem;
     display: flex;
     flex-wrap: wrap;
+    margin-bottom: 0.5rem;
 }
 .info {
-    width: 8rem;
+    min-width: 8rem;
     height: auto;
     padding: 0;
-    margin: 0;
 }
+
 .studentAvatar {
     width: 2rem;
     height: 2rem;
